--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_3-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_3-review.ipynb
@@ -19,6 +19,17 @@
     "menu: nav/CSA_Units/summary.html\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview: Boolean Expressions (Weighting: 15-17.5%)\n",
+    "- `Boolean`: The boolean type in Java can either be `true` or `false`\n",
+    "- EX:\n",
+    "```java\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
