--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_5-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_5-review.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ASDSADSDSDSGDFjfgdf"
+    "## Overview: Writing Classes (Weighting: 5-7.5%)"
    ]
   }
  ],
