progress got deleted?

--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_2-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_2-review.ipynb
@@ -29,8 +29,8 @@
    },
    "source": [
     "## Overview: Using Objects (Weighting: 5-7.5%)\n",
-    "- Objects are instances of a class that are created to use attributes and methods of class. \n",
-    "- Classes are blueprints, and objects are what is made using the blueprints."
+    "- `Objects`: instances of a class that are created to use attributes and methods of class. \n",
+    "- `Classes`: blueprints, and objects are what is made using the blueprints."
    ]
   },
   {
@@ -131,11 +131,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A. Movie m = new Movie(8.0, \"Lion King\");\n",
-    "B. Movie m = Movie(\"Lion King\", 8.0);\n",
-    "C. Movie m = new Movie();\n",
-    "D. Movie m = new Movie(\"Lion King\", \"Disney\", 8.0);\n",
-    "E. Movie m = new Movie(\"Lion King\");\n",
+    "1. Movie m = new Movie(8.0, \"Lion King\");\n",
+    "2. Movie m = Movie(\"Lion King\", 8.0);\n",
+    "3. Movie m = new Movie();\n",
+    "4. Movie m = new Movie(\"Lion King\", \"Disney\", 8.0);\n",
+    "5. Movie m = new Movie(\"Lion King\");\n",
     "\n",
     "<details>\n",
     "<summary>Click to reveal the answer</summary>\n",
@@ -190,11 +190,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A. I only\n",
-    "B. I and II\n",
-    "C. I and III\n",
-    "D. I, II, and III\n",
-    "E. II and III\n",
+    "1. I only\n",
+    "2. I and II\n",
+    "3. I and III\n",
+    "4. I, II, and III\n",
+    "5. II and III\n",
     "\n",
     "<details>\n",
     "<summary>Click to reveal the answer</summary>\n",
