--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_4-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_4-review.ipynb
@@ -24,7 +24,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview: Iteration (Weighting: 17.5-22.5%):"
+    "## Overview: Iteration (Weighting: 17.5-22.5%):\n",
+    "- `Iteration`: repeatedly executing a block of code until a condition is met\n",
+    "- The AP exam will test while loops, do while loops, for loops, enhanced iteration, and also nested loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## While Loops\n",
+    "- While loops run until the given condition is `false`\n",
+    "```java\n",
+    "int index = 0; // iterating value\n",
+    "while (index < 5) { // condition, if this is false, the loop terminates\n",
+    "    System.out.println(index); // body code\n",
+    "    index++; // iterates the iterating value\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Do While Loops\n",
+    "- Do while loops run the block inside of the do {} statement once, then iterates through the loop\n",
+    "- This means the code will run at least once\n",
+    "```java\n",
+    "int i = 0;\n",
+    "do {\n",
+    "    System.out.println(i);\n",
+    "    i++;\n",
+    "} while (i < 5);\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Loops\n",
+    "- Used for "
    ]
   }
  ],
