--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_7-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_7-review.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ADSSASDSDAASSADSDDSDSASDSADdsfdsfdf"
+    "## Overview: ArrayList (Weighted 2.5-7.5%)"
    ]
   }
  ],
