--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_8-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_8-review.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SADLKJFGFDJFDO"
+    "## Overview: 2D Arrays (Weighted: 7.5-10%)"
    ]
   }
  ],
