--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_9-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_9-review.ipynb
@@ -19,6 +19,13 @@
     "menu: nav/CSA_Units/summary.html\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview: Inheritance (Weighted: 5-10%)"
+   ]
   }
  ],
  "metadata": {
