--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_5-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_5-review.ipynb
@@ -29,8 +29,13 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
+  },
   "language_info": {
-   "name": "python"
+   "name": "java"
   }
  },
  "nbformat": 4,
