--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_4-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_4-review.ipynb
@@ -65,7 +65,26 @@
    "metadata": {},
    "source": [
     "## For Loops\n",
-    "- Used for "
+    "- Used for when you know in advance how many times the loop should run\n",
+    "```java\n",
+    "for (i = 0; i < 10; i++) {\n",
+    "    System.out.println(i);\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Enhanced For loops\n",
+    "- Used for when you don't need the index of each element, and you just need to process them\n",
+    "```java\n",
+    "int[] numbers = {1, 2, 3, 4, 5};\n",
+    "for (int num : numbers) {\n",
+    "    System.out.println(num);\n",
+    "}\n",
+    "```"
    ]
   }
  ],
