--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_7-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_7-review.ipynb
@@ -24,7 +24,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview: ArrayList (Weighted 2.5-7.5%)"
+    "## Overview: ArrayList (Weighted 2.5-7.5%)\n",
+    "- `ArrayLists`: more flexible than arrays because the amount of information stored is variable\n",
+    "- Size can be changed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "## Methods of ArrayLists\n",
+    "- `.size()`: returns the length of the ArrayList as an integer\n",
+    "- `.add(int index, element)`: Inserts the element at a specified index, and then shifts elements while increasing the size by 1\n",
+    "- `.remove(int index)`: Removes the element at a specified index, and then shifts elements while decreasing the size by 1.\n",
+    "- `.get(int index)`: retrieves the element at a specified index of the ArrayList\n",
+    "- `.set(int index)`: replaces the element at a specified index with a different value"
    ]
   }
  ],
