forgor to commit these

--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_8-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_8-review.ipynb
@@ -24,13 +24,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview: 2D Arrays (Weighted: 7.5-10%)"
+    "## Overview: 2D Arrays (Weighted: 7.5-10%)\n",
+    "- A 2D array is essentially an array inside of an array\n",
+    "- It has rows and columns and is essentially a matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initializing a 2D Array\n",
+    "- 2D arrays have all elements at a value of 0 or null by default\n",
+    "```java\n",
+    "int[][] 2DArrayName = new datatype[# of rows][# of columns]\n",
+    "```\n",
+    "- However, 2D arrays can be initialized with values so that it does not need to be populated:\n",
+    "```java\n",
+    "int[][] grades = {\n",
+    "    {90, 85, 88, 92}, \n",
+    "    {75, 80, 78, 85},\n",
+    "    {60, 65, 70, 75}\n",
+    "};\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Traversing a 2D Array\n",
+    "- To traverse a 2D array, a `nested for loop` is needed\n",
+    "```java\n",
+    "int[][] Array1 = {\n",
+    "    {1, 2, 3}, \n",
+    "    {4, 5, 6}, \n",
+    "    {7, 8, 9}\n",
+    "};\n",
+    "//This loop goes through each of the 3 rows\n",
+    "for (int i = 0; i < Array1.length; i++) {\n",
+    "    // This loop goes over each element within the row\n",
+    "    for (int j = 0; j < Array1[i].length; j++) {\n",
+    "        System.out.println(Array1[i][j]);\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "- Breaking it down:\n",
+    "    - Array[0] is {1, 2, 3}\n",
+    "    - Array[1] is {4, 5, 6}\n",
+    "    - Array[2] is {7, 8 ,9}\n",
+    "- When accessing the j element of the array[i] row, that iterates through the all of the columns within the selected array"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "java",
+   "pygments_lexer": "java",
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
  },
  "nbformat": 4,
