--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_4-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_4-review.ipynb
@@ -86,11 +86,112 @@
     "}\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "## College Board Practice!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the following code segment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int count = 0, sum = 0;\n",
+    "while (count <= 6)\n",
+    "{\n",
+    "    count++;\n",
+    "    if (count % 2 == 0)\n",
+    "    {\n",
+    "        sum += count;\n",
+    "    }\n",
+    "}\n",
+    "System.out.println(sum);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which of the following code segments will produce the same output as the code segment above?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "I.  int sum = 0;\n",
+    "    for(int count = 0; count <= 6; count++)\n",
+    "    {\n",
+    "        count++;\n",
+    "        if (count % 2 == 0)\n",
+    "        {\n",
+    "             sum += count;\n",
+    "        }\n",
+    "    }\n",
+    "    System.out.println(sum);\n",
+    "\n",
+    "II. int sum = 0;\n",
+    "    for(int i = 0; i <= 6; i += 2)\n",
+    "    {\n",
+    "       sum += i;\n",
+    "    }\n",
+    "    System.out.println(sum);\n",
+    "\n",
+    "III. int sum = 0;\n",
+    "     for(int j = 7; j > 1; j--)\n",
+    "     {\n",
+    "        if (j % 2 == 0)\n",
+    "        {\n",
+    "             sum += j;\n",
+    "        }\n",
+    "     }\n",
+    "     System.out.println(sum);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. I and II only\n",
+    "2. II and III only\n",
+    "3. I and III only\n",
+    "4. III only\n",
+    "5. I, II, and III\n",
+    "\n",
+    "<details>\n",
+    "<summary>Click to reveal the answer</summary>\n",
+    "\n",
+    "The answer choice is B because for II, the loop counter increments by 2’s making sure it visits only even numbers and III generates the same sum but backwards.\n",
+    "\n",
+    "</details>"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
+  },
   "language_info": {
-   "name": "python"
+   "name": "java"
   }
  },
  "nbformat": 4,
