--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_5-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_5-review.ipynb
@@ -46,6 +46,101 @@
     "- `Accessor methods`: a getter method that allows other objects to obtain the value of instance variables or static variables.\n",
     "- `Mutator methods`: a method that modifies an object's state my changing the value of its fields or attributes."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## College Board Practice!\n",
+    "The Cat class below will contain two String attributes and one int attribute for name, color, and age; a constructor; and an adoptCat method. The adoptCat method is intended to be accessed outside the class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Cat\n",
+    "{\n",
+    "  /* missing code */\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which of the following replacements for /* missing code */ is the most appropriate\n",
+    "implementation of the class?\n",
+    "\n",
+    "A. \n",
+    "```java\n",
+    "private String name;\n",
+    "private String color;\n",
+    "private int age;\n",
+    "public Cat()\n",
+    "{ /* implementation not shown */ }\n",
+    "private void adoptCat(String n, String c, int a)\n",
+    "{ /* implementation not shown */ }\n",
+    "```\n",
+    "\n",
+    "B.\n",
+    "```java\n",
+    "public String name;\n",
+    "public String color;\n",
+    "public int age;\n",
+    "private Cat()\n",
+    "{ /* implementation not shown */ }\n",
+    "private void adoptCat(String n, String c, int a)\n",
+    "{ /* implementation not shown */ }\n",
+    "```\n",
+    "\n",
+    "C.\n",
+    "```java\n",
+    "public String name;\n",
+    "public String color;\n",
+    "public int age;\n",
+    "private Cat()\n",
+    "{ /* implementation not shown */ }\n",
+    "public void adoptCat(String n, String c, int a)\n",
+    "{ /* implementation not shown */ }\n",
+    "```\n",
+    "\n",
+    "D.\n",
+    "```java\n",
+    "private String name;\n",
+    "private String color;\n",
+    "private int age;\n",
+    "public Cat()\n",
+    "{ /* implementation not shown */ }\n",
+    "public void adoptCat(String n, String c, int a)\n",
+    "{ /* implementation not shown */ }\n",
+    "```\n",
+    "\n",
+    "E.\n",
+    "```java\n",
+    "public String name;\n",
+    "public String color;\n",
+    "public int age;\n",
+    "public Cat()\n",
+    "{ /* implementation not shown */ }\n",
+    "public void adoptCat(String n, String c, int a)\n",
+    "{ /* implementation not shown */ }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>Click to reveal the answer</summary>\n",
+    "\n",
+    "The correct answer is D because the instance variables should be private, but the method and constructor should be public because `adoptCat` needs to be accessed outside of the class.\n",
+    "\n",
+    "</details>"
+   ]
   }
  ],
  "metadata": {
