--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_8-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_8-review.ipynb
@@ -74,6 +74,53 @@
     "    - Array[2] is {7, 8 ,9}\n",
     "- When accessing the j element of the array[i] row, that iterates through the all of the columns within the selected array"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## College Board Practice!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the following code segment, what is the value of sum after this code executes?\n",
+    "\n",
+    "```java\n",
+    "int[][] matrix = { \n",
+    "    {1,1,2,2},\n",
+    "    {1,2,2,4},\n",
+    "    {1,2,3,4},\n",
+    "    {1,4,1,2}\n",
+    "};\n",
+    "\n",
+    "int sum = 0;\n",
+    "int col = matrix[0].length - 2;\n",
+    "for (int row = 0; row < 4; row++)\n",
+    "{\n",
+    "   sum = sum + matrix[row][col];\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "A. 4\n",
+    "\n",
+    "B. 8\n",
+    "\n",
+    "C. 9\n",
+    "\n",
+    "D. 12\n",
+    "\n",
+    "E. 10\n",
+    "\n",
+    "<details>\n",
+    "<summary>Click to reveal the answer</summary>\n",
+    "\n",
+    "The answer is B. Since col is matrix[0].length - 2 it is 4 - 2 which is 2. This code will loop through all the rows and add all the numbers in the third column (index is 2) which is 2 + 2 + 3 + 1 which is 8.\n",
+    "\n",
+    "</details>\n"
+   ]
   }
  ],
  "metadata": {
