--- a/_notebooks/Foundation/_tangibles/2024-10-09-unit_9-review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-10-09-unit_9-review.ipynb
@@ -125,6 +125,66 @@
     "\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## College Board Practice!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assume that Base b = new Derived(); appears in a client program. What is the result of the call b.methodOne();?\n",
+    "\n",
+    "```java\n",
+    "public class Base\n",
+    "{\n",
+    "    public void methodOne()\n",
+    "    {\n",
+    "        System.out.print(\"A\");\n",
+    "        methodTwo();\n",
+    "    }\n",
+    "\n",
+    "    public void methodTwo()\n",
+    "    {\n",
+    "        System.out.print(\"B\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Derived extends Base\n",
+    "{\n",
+    "    public void methodOne()\n",
+    "    {\n",
+    "        super.methodOne();\n",
+    "        System.out.print(\"C\");\n",
+    "    }\n",
+    "\n",
+    "    public void methodTwo()\n",
+    "    {\n",
+    "        super.methodTwo();\n",
+    "        System.out.print(\"D\");\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "A. ABDC\n",
+    "\n",
+    "B. AB\n",
+    "\n",
+    "C. ABCD\n",
+    "\n",
+    "D. ABC\n",
+    "\n",
+    "<details>\n",
+    "<summary>Click to reveal the answer</summary>\n",
+    "\n",
+    "The answer is A. Even though b is declared as type Base it is created as an object of the Derived class, so all methods to it will be resolved starting with the Derived class. So the methodOne() in Derived will be called. This method first calls super.methodOne so this will invoke the method in the superclass (which is Base). So next the methodOne in Base will execute. This prints the letter \"A\" and invokes this.methodTwo(). Since b is really a Derived object, we check there first to see if it has a methodTwo. It does, so execution continues in the Derived class methodTwo. This method invokes super.methodTwo. So this will invoke the method in the super class (Base) named methodTwo. This method prints the letter \"B\" and then returns. Next the execution returns from the call to the super.methodTwo and prints the letter \"D\". We return to the Base class methodOne and return from that to the Derived class methodOne and print the letter \"C\".\n",
+    "\n",
+    "</details>"
+   ]
   }
  ],
  "metadata": {
