--- a/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 4 (00:22)\n",
+    "### Question 4\n",
     "![4](https://assets.learnosity.com/organisations/537/media.academicmerit.com/9030876d3f339beb4985ad70e46c4d62/original.jpg)\n",
     "\n",
     "What is printed as a result of executing the code segment?\n",
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 10 (02:10)\n",
+    "### Question 10\n",
     "Directions: Select the choice that best fits each statement. The following question(s) refer to the following information\n",
     "\n",
     "Consider the following instance variable and methods. You may assume that data has been initialized with length > 0. The methods are intended to return the index of an array element equal to target, or -1 if no such element exists.\n",
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 11 (01:53)\n",
+    "### Question 11\n",
     "Directions: Select the choice that best fits each statement. The following question(s) refer to the following information\n",
     "\n",
     "Consider the following instance variable and methods. You may assume that data has been initialized with length > 0. The methods are intended to return the index of an array element equal to target, or -1 if no such element exists.\n",
@@ -301,14 +301,76 @@
    "metadata": {},
    "source": [
     "### Correction\n",
-    "Lowkey bro idk."
+    "I chose A, because I wasn't being careful about how manipulate affects \"baboon\" twice, since if it is moved to the 2nd element, it will be accessed at the end as well and moved to the end given the new `k` value. This means that opton choice B is the correct answer."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 30"
+    "### Question 30\n",
+    "Consider the following method.\n",
+    "\n",
+    "![30](https://assets.learnosity.com/organisations/537/media.academicmerit.com/322e49e63a36e812d997ab61f4ccb08a/original.jpg)\n",
+    "\n",
+    "What value is returned as a result of the call scramble(\"compiler\", 3)?\n",
+    "\n",
+    "A. \"compiler\"\n",
+    "\n",
+    "B. \"pilercom\"\n",
+    "\n",
+    "C. \"ilercom\"\n",
+    "\n",
+    "D. \"ilercomp\"\n",
+    "\n",
+    "E. No value is returned because an IndexOutOfBoundsException will be thrown."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correction\n",
+    "I misclicked 😭\n",
+    "\n",
+    "C is correct because the substring of `howFar + 1` to `word.length()` will go from the the 5th element to the last due to zero indexing of lists, and then substrin from `0` to `howFar` will return \"com\". "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 35\n",
+    "Consider the following code segment.\n",
+    "\n",
+    "![35](https://assets.learnosity.com/organisations/537/media.academicmerit.com/5c4fd296b6cab7c9d7bf8967009969e8/original.jpg)\n",
+    "\n",
+    "What is printed as a result of executing the code segment?\n",
+    "\n",
+    "A. 2\n",
+    "\n",
+    "B. 4\n",
+    "\n",
+    "C. 18\n",
+    "\n",
+    "D. 2574\n",
+    "\n",
+    "E. 4752"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correction\n",
+    "I chose C because I didn't read the code too carefully and didn't see how result was constantly changing.\n",
+    "\n",
+    "1. result = 0 * 10 + 2574 % 10 = 4\n",
+    "2. result = 4 * 10 + 257 % 10 = 47\n",
+    "3. result = 47 * 10 + 25 % 10 = 475\n",
+    "4. result = 475 * 10 + 2 % 10 = 4752\n",
+    "\n",
+    "Therefore the correct answer is E."
    ]
   }
  ],
